--- a/Entregable-4-Orciuolo/package.json
+++ b/Entregable-4-Orciuolo/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/NicolasOrciuolo/Orciuolo-backend#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.1"
   }
 }
