--- a/Entregable-5-Orciuolo/package.json
+++ b/Entregable-5-Orciuolo/package.json
@@ -24,7 +24,9 @@
   "homepage": "https://github.com/NicolasOrciuolo/Orciuolo-backend#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   }
 }
