--- a/Entregable-9-Orciuolo/package.json
+++ b/Entregable-9-Orciuolo/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/NicolasOrciuolo/Orciuolo-backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -32,6 +33,9 @@
     "mongoose": "^8.0.2",
     "mongoose-paginate-v2": "^1.7.4",
     "nodemon": "^3.0.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.10.2",
     "uuid": "^9.0.1"
